# vidwaan-ai-fine-tuning

./: .gitignore  Dockerfile  Makefile  README.md  check_readiness.py  config.yaml  docker-compose.yml  export_model.py  export_model.sh  generate_local_dataset.py  generate_mlx_data.py  hybrid_rag_engine.py  init_workspace.sh  publish_model.py  pyproject.toml  raw_entities.json  run_training.sh  test_adapter.py  train.py  validate_local_data.py  verify_fused_output.py
ansible/: inventory.ini  playbook.yml  vars.yml
scripts/: create_test_pdf.py  fine_tune_dummy.py  prepare_data.py
tests/: test_dataset_generator.py  test_integration.py  test_rag_engine.py  test_readiness.py  test_training.py  test_validator.py
